# super-duper-octo-pancake

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: openai-notes.md
examples/cases/: stripe_minions.jsonl
src/harness/: __init__.py  cases.py  cli.py  evaluator.py  offline.py  runner.py  schemas.py  tools.py
tests/: test_cases.py  test_evaluator.py  test_runner.py
